# CashCounter

./: .gitignore  README.md  pyproject.toml
models/: Currency.py  Database.py  User.py  count.py  count_record.py  currency.py  database.py  denomination.py  user.py
ui/: begin_new_count_screen.py  login_screen.py  main_menu.py
utils/: config.py  setup.py
