[tool.poetry]
name = "cashcounter"
version = "0.1.0"
description = "An application built using PyQT6 to count cash in cash drawers"
authors = ["Liam Spatola <liam.spatola@gmail.com>"]
license = "GNU GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyqt6 = "^6.9.1"
bcrypt = "^4.3.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
